@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* [mms] SECURITY: Fix XSS vulnerability on the dynamic compose page.
+* [mms] SECURITY: Fix XSS vulnerabilities on the dynamic compose page and the minimal mailbox and message pages.
 * [jan] Re-add leading paragraph before HTML signatures to avoid writing into the signature.
 * [jan] Use preferred editor if not opening compose window from dynamic view.
 * [jan] Update Italian translation (Emilien &lt;emilien@wifi.e4a.it&gt;).
@@ -2716,7 +2716,7 @@
    <date>2012-04-11</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* [mms] SECURITY: Fix XSS vulnerability on the dynamic compose page.
+* [mms] SECURITY: Fix XSS vulnerabilities on the dynamic compose page and the minimal mailbox and message pages.
 * [jan] Re-add leading paragraph before HTML signatures to avoid writing into the signature.
 * [jan] Use preferred editor if not opening compose window from dynamic view.
 * [jan] Update Italian translation (Emilien &lt;emilien@wifi.e4a.it&gt;).
