@@ -2,7 +2,8 @@
 v5.0.21-git
 -----------
 
-[mms] SECURITY: Fix XSS vulnerability on the dynamic compose page.
+[mms] SECURITY: Fix XSS vulnerabilities on the dynamic compose page and the
+      minimal mailbox and message pages.
 [jan] Re-add leading paragraph before HTML signatures to avoid writing into
       the signature.
 [jan] Use preferred editor if not opening compose window from dynamic view.
